@@ -1,1 +1,11 @@
 # MonkeyRunner-Guide
+
+Run this to use the interpreter:
+```
+java -Djava.ext.dirs=. -jar monkeyrunner-26.0.0-dev.jar
+```
+
+Run this to interpret a python file.
+```
+java -Djava.ext.dirs=. -jar monkeyrunner-26.0.0-dev.jar test.py
+```
